# lang-flow-agent

./: README.md  main.py  pyproject.toml
kioskcrew/: README.md  action_plan.json  computer_action.json  pyproject.toml  report.md  screen_analysis.json
kioskcrew/src/kioskcrew/: crew.py  main.py
kioskcrew/src/kioskcrew/config/: agents.yaml  tasks.yaml
