[project]
name = "kioskcrew"
version = "0.1.0"
description = "kioskCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
kioskcrew = "kioskcrew.main:run"
run_crew = "kioskcrew.main:run"
train = "kioskcrew.main:train"
replay = "kioskcrew.main:replay"
test = "kioskcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
